<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/md_blue_grey_800"
    tools:context="com.hcoderteam.hcoder.LoginActivity">

    <LinearLayout
        android:id="@+id/login_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/md_white_1000"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:background="@drawable/edittext_background"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:hint="@string/username"
            android:textColorHint="#cccccc"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/login_error_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/md_white_1000"
            android:background="@drawable/button_blue"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</RelativeLayout>
